@@ -17,6 +17,17 @@ Development Environment:
 - JavaFX Version - JavaFX-SDK-18.0.1
 - MySQL Connector version 8.0.29 (mysql-connector-java-8.0.29)
 
+Directions:
+To run this application, you need to create a run configuration in IntelliJ. To do that, look for the configuration menu next to the green
+arrow in the top right corner of the IDE. Select "Edit Configurations", and then choose to create a new one.
+- Give the configuration a name (e.g Main)
+- Select  Java SDK Version 18. If you do not see this, you will need to download it.
+- Add this to the VM options: --module-path ${PATH_TO_FX} --add-modules javafx.fxml,javafx.controls,javafx.graphics
+
+Lastly, you need to make sure the PATH_TO_FX environment variable is set. You can do this in settings, under
+settings -> appearance and behavior -> Path Variables. The value for the variable needs to be set to the file location of
+JavaFX on your machine.
+
 
 Additional Report:
 The additional report shows how many customers exist in each division. This is useful for helping us understand where
